# olvx_descriptions_kit

./: CMakeLists.txt  LICENSE  README.md  combined.urdf  package.xml
launch/: visualize_olive_ant.launch.py  visualize_olive_owl.launch.py
meshes/: olv-owl01-lbracket.dae
rviz/: visualize_olive.rviz
urdf/: olv-ant01.urdf  olv-owl-lbracket.urdf  olv-owl01-lbracket.urdf  olv-owl01-lbracket.urdf.xacro  olv-owl01.urdf
